# carta-schemas

./: CMakeLists.txt  README.md  _config.yml  controller_config_schema_1.json  controller_config_schema_2.json  layout_schema_2.json  link_schemas.sh  preference_backend_schema_1.json  preference_backend_schema_2.json  preference_schema_1.json  preferences_schema_2.json  schemacompiler.c  snippet_schema_1.json  workspace_schema_1.json
test/: validate_controller_config_objects.sh  validate_mongodb_objects.sh  validate_user_directory_objects.sh
